--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -50,6 +50,9 @@
       {% if author.semantic %}
         <li><a href="{{ author.semantic }}"><i class="ai ai-semantic-scholar ai-fw icon-pad-right"></i>Semantic Scholar</a></li>
       {% endif %}
+      {% if author.inspirehep %}
+        <li><a href="{{ author.inspirehep }}"><i class="ai ai-inspire ai-fw icon-pad-right"></i> Inspire HEP</a></li>
+      {% endif %}
       {% if author.impactstory %}
         <li><a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw icon-pad-right"></i>Impactstory</a></li>
       {% endif %}
