Changed how inspire appears in the sidebar

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -51,7 +51,7 @@
         <li><a href="{{ author.semantic }}"><i class="ai ai-semantic-scholar ai-fw icon-pad-right"></i>Semantic Scholar</a></li>
       {% endif %}
       {% if author.inspirehep %}
-        <li><a href="{{ author.inspirehep }}"><i class="ai ai-inspire ai-fw icon-pad-right"></i>INSPIRE</a></li>
+        <li><a href="{{ author.inspirehep }}"><i class="ai ai-inspire ai-fw icon-pad-right"></i>iNSPIRE</a></li>
       {% endif %}
       {% if author.impactstory %}
         <li><a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw icon-pad-right"></i>Impactstory</a></li>
